fix: fix column spacing

--- a/frappe/desk/page/leaderboard/leaderboard.css
+++ b/frappe/desk/page/leaderboard/leaderboard.css
@@ -48,6 +48,10 @@
 	font-weight: bold;
 }
 
+.rank {
+	max-width: 150px;
+}
+
 /*
 .header-btn-base:hover {
 	box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)
